[tool.poetry]
name = "enso"
version = "0.1.0"
description = ""
authors = ["kcwongaz <kcwongaz@connect.ust.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
polars = "^0.20.5"
pandas = "^2.2.0"
networkx = "^3.2.1"
netCDF4 = "^1.6.5"
Bottleneck = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
