[tool.poetry]
name = "enso"
version = "0.1.0"
description = ""
authors = ["kcwongaz <kcwongaz@connect.ust.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
polars = "^0.20.5"
pandas = "^2.2.0"
networkx = "^3.2.1"
netCDF4 = "^1.6.5"
Bottleneck = "^1.3.7"
matplotlib = "^3.8.2"
statsmodels = "^0.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
